@@ -26,8 +26,8 @@ import com.fongmi.android.tv.ui.custom.SpaceItemDecoration;
 import com.fongmi.android.tv.utils.FileChooser;
 import com.fongmi.android.tv.utils.ResUtil;
 import com.google.android.material.bottomsheet.BottomSheetDialogFragment;
-
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import tv.danmaku.ijk.media.player.misc.ITrackInfo;
@@ -39,6 +39,7 @@ public final class TrackDialog extends BaseDialog implements TrackAdapter.OnClic
     private DialogTrackBinding binding;
     private FragmentActivity activity;
     private Listener listener;
+    private ChooserListener cListener;
     private Players player;
     private int type;
 
@@ -53,6 +54,11 @@ public final class TrackDialog extends BaseDialog implements TrackAdapter.OnClic
 
     public TrackDialog type(int type) {
         this.type = type;
+        return this;
+    }
+
+    public TrackDialog chooser(ChooserListener listener) {
+        this.cListener = listener;
         return this;
     }
 
@@ -97,7 +103,8 @@ public final class TrackDialog extends BaseDialog implements TrackAdapter.OnClic
     }
 
     private void showChooser(View view) {
-        FileChooser.from(this).show(new String[]{MimeTypes.APPLICATION_SUBRIP, MimeTypes.TEXT_SSA, MimeTypes.TEXT_VTT, MimeTypes.APPLICATION_TTML, "text/*", "application/octet-stream"});
+        if (cListener != null) cListener.showChooser(this);
+        else FileChooser.from(this).show(new String[]{MimeTypes.APPLICATION_SUBRIP, MimeTypes.TEXT_SSA, MimeTypes.TEXT_VTT, MimeTypes.APPLICATION_TTML, "text/*", "application/octet-stream"});
         player.pause();
     }
 
@@ -142,7 +149,7 @@ public final class TrackDialog extends BaseDialog implements TrackAdapter.OnClic
     @Override
     public void onItemClick(Track item) {
         if (listener != null) listener.onTrackClick(item);
-        player.setTrack(List.of(item));
+        player.setTrack(Arrays.asList(item));
         if (item.isAdaptive()) return;
         dismiss();
     }
@@ -158,5 +165,10 @@ public final class TrackDialog extends BaseDialog implements TrackAdapter.OnClic
     public interface Listener {
 
         void onTrackClick(Track item);
+    }
+
+    public interface ChooserListener {
+
+        void showChooser(TrackDialog dialog);
     }
 }
